--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -10,6 +10,6 @@
 <p>Beatbuddy is a collaborative music platform, that will allow you to create playlists with your friends family and more!</p>
 
 <a href="#" class="btn">
-    <i class="material-icons">check</i>
+    <i class="material-icons">equalizer</i>
     I am a button!
 </a>
