--- a/UI-MVC/Views/Account/Login.cshtml
+++ b/UI-MVC/Views/Account/Login.cshtml
@@ -11,20 +11,21 @@
     <h3>Sign in to your account</h3>
 </div>
 
-<div class="center-block">
+<div class="center-block" style="margin-top: -15px">
     @using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {enctype="multipart/form-data", role = "form"}))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
-
-        
             <div class="center-block">
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "custom-validation" })
+                <br/>
                 @Html.TextBoxFor(m => m.Email, new { @class = "custom-input", placeholder = Html.DisplayNameFor(m => m.Email) })
-                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                
             </div>
             <div class="center-block">
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "custom-validation" })
+                
                 @Html.PasswordFor(m => m.Password, new { @class = "custom-input", placeholder = Html.DisplayNameFor(m => m.Password) })
-                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
             </div>
 
             <div class="center-block">
