--- a/UI-MVC/Views/Organisations/Create.cshtml
+++ b/UI-MVC/Views/Organisations/Create.cshtml
@@ -33,9 +33,9 @@
         </div>
         <div>
             <input type="file" id="avatarImage" name="avatarImage" style="display: none"/>
-            <div class="custom-input-organisations" style="padding:10px; overflow: hidden">
-                <text id="avatarLabel" style="width: 90%; vertical-align: central; word-wrap: break-word; float: left">Click right to select logo image</text>
-                <i class="material-icons" style="cursor: pointer; float: right; vertical-align: central" id="avatar_click">image</i>
+            <div class="custom-input-organisations" style="overflow: hidden">
+                <text id="avatarLabel" class="form-label">Click right to select logo image</text>
+                <i class="material-icons form-img-icon"id="avatar_click">image</i>
             </div> 
         </div> 
 
@@ -46,9 +46,9 @@
         </div>
          <div>
              <input type="file" id="bannerImage" name="bannerImage" style="display: none"/>
-             <div class="custom-input-organisations"  style="padding:10px; overflow: hidden">
-                 <text id="bannerLabel" style="width: 90%; vertical-align: central; word-wrap: break-word; float: left">Click right to select banner image</text>
-                 <i class="material-icons" style="cursor: pointer; float: right; vertical-align: central" id="banner_click" >image</i>
+             <div class="custom-input-organisations"  style="overflow: hidden">
+                 <text id="bannerLabel" class="form-label">Click right to select banner image</text>
+                 <i class="material-icons form-img-icon"  id="banner_click" >image</i>
              </div>
         </div>
 
