--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -188,17 +188,6 @@ header {
 #custom-inputform-organisations .other-form-groups, #custom-inputform-playlists .other-form-groups {
   margin-top: 14px; }
 
-.form-label {
-  width: 90%;
-  vertical-align: middle;
-  word-wrap: break-word;
-  float: left; }
-
-.form-img-icon {
-  cursor: pointer;
-  float: right;
-  vertical-align: middle; }
-
 #custom-inputform-registration {
   border-right: 1px solid #d3d3d3;
   display: block; }
@@ -263,6 +252,17 @@ header {
   border: 1px solid #000;
   outline: none; }
 
+.form-label {
+  width: 90%;
+  vertical-align: middle;
+  word-wrap: break-word;
+  float: left; }
+
+.form-img-icon {
+  cursor: pointer;
+  float: right;
+  vertical-align: middle; }
+
 .round {
   border-radius: 50%; }
 
@@ -322,6 +322,17 @@ header {
 
 .btn-right {
   float: right; }
+
+.btn-login {
+  width: 270px;
+  height: 3em;
+  margin-top: 1em; }
+
+.min-margin-top {
+  margin-top: -15px; }
+
+.horizontal-center {
+  text-align: center; }
 
 footer {
   display: block;
